[package]
name = "rusty-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based HTTP proxy script manager for traffic injection"
license = "MIT"

[[bin]]
name = "rusty-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
config = "0.13"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"